k8s/homefs.biz/bootstrap/argocd/argocd-server-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cd.pyldin601.dev`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
          scheme: https
  tls:
    certResolver: default
